@@ -1,5 +1,10 @@
 2005-07-19  Derek Price  <derek@ximbiot.com>
 
+	* texi2html.pl: Don't add the file extension when it is empty.  Some
+	cleanup.
+
+2005-07-19  Derek Price  <derek@ximbiot.com>
+
 	* images/*: Remove these files since they are distributed under a
 	license incompatible with the GPL.
 	* NEWS: Note images/* removal.  Repair some grammar.
